Use minutes for minimumDuration setting instead of hours.

--- a/options/options.html
+++ b/options/options.html
@@ -21,7 +21,7 @@
   <h1>Event Duration for Google Calendar</h1>
 
   <div class="minimumDurationContainer">
-    Don't show duration for events shorter than <input type="text" id="minimumDuration"> hour(s).
+    Don't show duration for events shorter than <input type="text" id="minimumDuration"> minute(s).
   </div>
 
   <div>
