Add support in formatDiff for decimalHours formatting (ie, "2.5 hours").

--- a/spec/SpecRunner.html
+++ b/spec/SpecRunner.html
@@ -13,10 +13,13 @@
 
   <!-- include source files here... -->
   <script src="../libraries/moment.js"></script>
+  <script src="../libraries/moment-duration-format.js"></script>
   <script src="../lib/calculate-diff.js"></script>
+  <script src="../lib/format-diff.js"></script>
 
   <!-- include spec files here... -->
   <script src="calculate-diff-spec.js"></script>
+  <script src="format-diff-spec.js"></script>
 </head>
 
 <body>
